# clAI

./: .clai.toml  .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONFIG_TEST_RESULTS.md  CONTEXT_TEST_RESULTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  OPENROUTER_TEST.md  README.md  TEST_COMMANDS.md  demo-ui.ts  eslint.config.js  package.json  test_config.sh  test_openrouter.sh  tsconfig.json  vitest.config.ts
.cargo/: config.toml
.github/workflows/: release.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
benches/: startup.rs
docs/: POTENTIAL_PACKAGES_TUI_DEVELOPMENT.md  PRD_AND_TECHNICAL_SPEC.md  PRD_AND_TECH_SPEC.md  SIGNAL_HANDLING.md  distribution-research.md  installation.md
examples/: test_context.rs
scripts/: install-hooks.sh  lint.sh  pre-commit.sh
scripts/hooks/: pre-commit
src/: lib.rs  main.rs  main.ts
src/ai/: chain.rs  handler.rs  index.ts  mock.ts  mod.rs  parser.ts  prompt.rs  prompt.ts  provider.rs  types.rs  types.ts
src/cli/: index.ts  mod.rs
src/color/: mod.rs
src/config/: cache.rs  file.rs  index.ts  loader.rs  merger.rs  mod.rs  paths.rs  types.ts
src/context/: directory.rs  directory.ts  gatherer.rs  history.rs  history.ts  index.ts  mod.rs  redaction.ts  stdin.rs  stdin.ts  system.rs  system.ts  (+1 more)
tests/: ai.test.ts  cli.test.ts  cli_tests.rs  config.test.ts  context.test.ts  error.test.ts  execute.test.ts  main-errors.test.ts  main-logging.test.ts  main-signals.test.ts  safety.test.ts  setup.test.ts  signals.test.ts  test_context_gathering.rs
(+44 files in other folders)
