[package]
name = "clai"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]

[lib]
name = "clai"
path = "src/lib.rs"

[[bin]]
name = "clai"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37"
regex = "1.12"
signal-hook = "0.4"
xdg = "3.0"
directories = "6.0"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
async-trait = "0.1"
owo-colors = "4.2"
atty = "0.2"
crossterm = "0.29"
tempfile = "3.10"
once_cell = "1.20"

[profile.dev]
# Keep incremental on so small changes rebuild in seconds (default, but explicit)
incremental = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = 3
strip = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
bench = []

[[bench]]
name = "startup"
harness = false
